--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,39 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <%- include('../partials/head'); %>
 </head>
+
 <body class="container">
 
-<header>
-  <%- include('../partials/header'); %>
-</header>
+  <header>
+    <%- include('../partials/header'); %>
+  </header>
 
-<main>
-  <div class="jumbotron">
-    <h1>Instance Metadata is Great</h1>
-    <p>Welcome to AWS Demo</p>
+  <main>
+    <div class="jumbotron">
+      <h1>Instance Metadata is Cool</h1>
+      <p>Welcome to AWS Demo</p>
 
-    <h2>Varirable</h2>
-    <p><%= tagline %></p>
+     
+      <table class="table table-striped table-dark">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col"><strong>EC2 Parameter</strong></th>
+            <th scope="col"><strong>Value</strong></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Instance ID</td>
+            <td><%= instanceid %></td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Host Name</td>
+            <td> <%= hostname %></td>
+          </tr>
+          
+          <tr>
+            <th scope="row">3</th>
+            <td>AMI Id</td>
+            <td> <%= amiid %></td>
+          </tr>
 
-    <h2>Instanse ID</h2>
-    <p><%= Instanceid %></p>
+          <tr>
+            <th scope="row">4</th>
+            <td>Instance Type</td>
+            <td> <%= instancetype %></td>
+          </tr>
 
-    <ul>
-      <% mascots.forEach(function(mascot) { %>
-        <li>
-          <strong><%= mascot.name %></strong> representing <%= mascot.organization %>, born <%= mascot.birth_year %>
-        </li>
-      <% }); %>
-    </ul>
+          <tr>
+            <th scope="row">5</th>
+            <td>Public IPV4</td>
+            <td> <%= publicipv4 %></td>
+          </tr>
 
-  </div>
-</main>
+          <tr>
+            <th scope="row">6</th>
+            <td>Public Host Name</td>
+            <td> <%= publichostname %></td>
+          </tr>
 
-<footer>
-  <%- include('../partials/footer'); %>
-</footer>
+
+          <tr>
+            <th scope="row">7</th>
+            <td>MAC Address</td>
+            <td> <%= mac %></td>
+          </tr>
+
+
+          <tr>
+            <th scope="row">8</th>
+            <td>Instance Profile</td>
+            <td> <%= iaminfo %></td>
+          </tr>
+
+        </tbody>
+      </table>
+
+
+     
+
+    </div>
+  </main>
+
+  <footer>
+    <%- include('../partials/footer'); %>
+  </footer>
 
 </body>
+
 </html>
