--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -74,13 +74,11 @@
             <td>Instance Profile</td>
             <td> 
               <ul>
-                <% iaminfo.forEach(function(values) { %>
                   <li>
                     <strong>
-                      <%= values %>
+                      <%= iaminfo.InstanceProfileArn %>
                     </strong> 
                   </li>
-                  <% }); %>
               </ul>
             </td>
           </tr>
