--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -76,7 +76,7 @@
               <ul>
                   <li>
                     <strong>
-                      <%= iaminfo.InstanceProfileArn %>
+                      <%= iaminfo %>
                     </strong> 
                   </li>
               </ul>
