--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -76,8 +76,9 @@
               <ul>
                   <li>
                     <strong>
-                      <%= iaminfo.InstanceProfileArn %>
+                      Instance Role ARN :
                     </strong> 
+                    <%= iaminfo.InstanceProfileArn %>
                   </li>
               </ul>
             </td>
