--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -80,6 +80,13 @@
                     </strong> 
                     <%= iaminfo.InstanceProfileArn %>
                   </li>
+                  <li>
+                    <strong>
+                      Instance Profile Id :
+                    </strong> 
+                    <%= iaminfo.InstanceProfileId %>
+                  </li>
+                  
               </ul>
             </td>
           </tr>
