--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -71,6 +71,12 @@
 
           <tr>
             <th scope="row">8</th>
+            <td>Private IP</td>
+            <td> <%= privateip %></td>
+          </tr>
+
+          <tr>
+            <th scope="row">8</th>
             <td>Instance Profile</td>
             <td> 
               <ul>
