--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -77,6 +77,12 @@
 
           <tr>
             <th scope="row">8</th>
+            <td>Avaialbility Zone</td>
+            <td> <%= az %></td>
+          </tr>
+
+          <tr>
+            <th scope="row">8</th>
             <td>Instance Profile</td>
             <td> 
               <ul>
