--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -83,6 +83,72 @@
 
           <tr>
             <th scope="row">8</th>
+            <td>Avaialbility Zone ID</td>
+            <td> <%= azid %></td>
+          </tr>
+
+          <tr>
+            <th scope="row">8</th>
+            <td>Security Groups/td>
+            <td> <%= sg %></td>
+          </tr>
+
+          <tr>
+            <th scope="row">8</th>
+            <td>Device Number</td>
+            <td> <%= devicenumber %></td>
+          </tr>
+
+          <tr>
+            <th scope="row">8</th>
+            <td>Network Interface</td>
+            <td> <%= networkinterface %></td>
+          </tr>
+
+          <tr>
+            <th scope="row">8</th>
+            <td>Avaialbility Zone</td>
+            <td> <%= az %></td>
+          </tr>
+
+          <tr>
+            <th scope="row">8</th>
+            <td>Subnet ID</td>
+            <td> <%= subnetid %></td>
+          </tr>
+
+          <tr>
+            <th scope="row">8</th>
+            <td>Avaialbility Zone</td>
+            <td> <%= az %></td>
+          </tr>
+
+          <tr>
+            <th scope="row">8</th>
+            <td>Subnet CIDR</td>
+            <td> <%= subnetcidr %></td>
+          </tr>
+
+          <tr>
+            <th scope="row">8</th>
+            <td>VPC ID</td>
+            <td> <%= vpcid %></td>
+          </tr>
+
+          <tr>
+            <th scope="row">8</th>
+            <td>VPC CIDR </td>
+            <td> <%= vpccidr %></td>
+          </tr>
+
+          <tr>
+            <th scope="row">8</th>
+            <td>VPC CIDRS </td>
+            <td> <%= vpccidrs %></td>
+          </tr>
+
+          <tr>
+            <th scope="row">8</th>
             <td>Instance Profile</td>
             <td> 
               <ul>
