--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -89,7 +89,7 @@
 
           <tr>
             <th scope="row">8</th>
-            <td>Security Groups/td>
+            <td>Security Groups</td>
             <td> <%= sg %></td>
           </tr>
 
