--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -52,28 +52,28 @@
           <tr>
             <th scope="row">5</th>
             <td>Public IPV4</td>
-            <td> <%= publicipv4 %></td>
+            <td> <span style="color: red;"><<%= publicipv4 %>/span> </td>
           </tr>
 
           <tr>
             <th scope="row">6</th>
+            <td>Private IPV4</td>
+            <td> <%= privateip %></td>
+          </tr>
+
+          <tr>
+            <th scope="row">7</th>
             <td>Public Host Name</td>
             <td> <%= publichostname %></td>
           </tr>
 
 
           <tr>
-            <th scope="row">7</th>
+            <th scope="row">8</th>
             <td>MAC Address</td>
             <td> <%= mac %></td>
           </tr>
 
-
-          <tr>
-            <th scope="row">8</th>
-            <td>Private IP</td>
-            <td> <%= privateip %></td>
-          </tr>
 
           <tr>
             <th scope="row">9</th>
