--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -52,7 +52,7 @@
           <tr>
             <th scope="row">5</th>
             <td>Public IPV4</td>
-            <td> <span style="color: red;"><<%= publicipv4 %>/span> </td>
+            <td> <span style="color:green;font-weight: bolder;"><%= publicipv4 %></span> </td>
           </tr>
 
           <tr>
