--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -29,7 +29,7 @@
           <tr>
             <th scope="row">1</th>
             <td>Instance ID</td>
-            <td><%= instanceid %></td>
+            <td> <span style="color:crimson;font-weight: bolder;"><%= instanceid %></span> </td>
           </tr>
           <tr>
             <th scope="row">2</th>
@@ -52,7 +52,7 @@
           <tr>
             <th scope="row">5</th>
             <td>Public IPV4</td>
-            <td> <span style="color:green;font-weight: bolder;"><%= publicipv4 %></span> </td>
+            <td> <span style="color:crimson;font-weight: bolder;"><%= publicipv4 %></span> </td>
           </tr>
 
           <tr>
