--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,7 +15,8 @@
     <div class="jumbotron">
       <h1>Instance Metadata is Cool</h1>
       <p>Welcome to AWS Demo</p>
-
+      <p>Public IPV4: <span style="color:peru;font-weight: bolder;"><%= publicipv4 %></p>
+      <p>Availability Zone: <span style="color:peru;font-weight: bolder;"><%= az %></p> 
      
       <table class="table table-striped table-dark">
         <thead>
