--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,9 +14,16 @@
   <main>
     <div class="jumbotron">
       <h1>Instance Metadata is Cool</h1>
-      <p>Welcome to AWS Demo</p>
-      <p>Public IPV4: <span style="color:peru;font-weight: bolder;"><%= publicipv4 %></p>
-      <p>Availability Zone: <span style="color:peru;font-weight: bolder;"><%= az %></p> 
+      <table>
+        <tr>
+          <td><p>Welcome to AWS Demo</p></td>
+          <td>< <p>Public IPV4: <span style="color:peru;font-weight: bolder;"><%= publicipv4 %></p>/td>
+          <td> <p>Availability Zone: <span style="color:peru;font-weight: bolder;"><%= az %></p> </td>
+        </tr>
+      </table>
+      
+     
+     
      
       <table class="table table-striped table-dark">
         <thead>
