--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -16,9 +16,9 @@
       <h1>Instance Metadata is Cool</h1>
       <table>
         <tr>
-          <td><p>Welcome to AWS Demo</p></td>
-          <td>< <p>Public IPV4: <span style="color:peru;font-weight: bolder;"><%= publicipv4 %></p>/td>
-          <td> <p>Availability Zone: <span style="color:peru;font-weight: bolder;"><%= az %></p> </td>
+          <td style="width: 30%;"><p>Welcome to AWS Demo</p></td>
+          <td style="width: 30%;"><p>Public IPV4: <span style="color:peru;font-weight: bolder;"><%= publicipv4 %></p></td>
+          <td style="width: 40%;"> <p>Availability Zone: <span style="color:peru;font-weight: bolder;"><%= az %></p> </td>
         </tr>
       </table>
       
