--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,11 +14,11 @@
   <main>
     <div class="jumbotron">
       <h1>Instance Metadata is Cool</h1>
-      <table>
+      <table style="width: 100%;">
         <tr>
           <td style="width: 30%;"><p>Welcome to AWS Demo</p></td>
           <td style="width: 30%;"><p>Public IPV4: <span style="color:peru;font-weight: bolder;"><%= publicipv4 %></p></td>
-          <td style="width: 40%; align-items: flex-end;"> <p>Availability Zone: <span style="color:peru;font-weight: bolder;"><%= az %></p> </td>
+          <td style="width: 40%; "> <p>Availability Zone: <span style="color:peru;font-weight: bolder;"><%= az %></p> </td>
         </tr>
       </table>
       
